Fix spacing between selectors and problems with gallery section

--- a/src/sass/components/gallery-section.scss
+++ b/src/sass/components/gallery-section.scss
@@ -1,4 +1,5 @@
 #gallery-section {
+  overflow: hidden;
   background-color: $color-pink;
 
   #gallery-button {
@@ -10,22 +11,26 @@
 
   #gallery-container {
     padding-top: 60px;
+
     #gallery-container-top {
       position: relative;
       padding-top: 20px;
       padding-bottom: 40px;
       display: flex;
       justify-content: space-between;
+
       @media only screen and (max-width: $br-sm) {
           flex-direction: column;
           justify-content: center;
         align-items: center;
         text-align: left;
       }
+
       h2 {
         position: relative;
         width: 60%;
         padding-right: 40px;
+
         @media only screen and (max-width: $br-sm) {
           margin-bottom: 20px;
           width: 100%;
@@ -35,6 +40,7 @@
       }
       p {
         width: 50%;
+
         @media only screen and (max-width: $br-sm) {
           width: 100%;
         }
@@ -42,11 +48,14 @@
     }
 
     #gallery-container-bottom {
+
       nav {
+
         button {
           border: none;
           background-color: transparent;
           margin-right: 20px;
+
           @media only screen and (max-width: $br-sm) {
             margin-bottom: 10px;
             margin-right: 40px;
@@ -56,92 +65,105 @@
     }
   }
 
-  /**
-    TODO: Transitions in wrong place. Do not need to be in the :hover styles for simple transitions
-    There Should be one hover for the whole block not one for each element inside it
-    Also you need to space things out more (goes for all files)
-   */
-
   .gallery-img {
     position: relative;
+
     .gallery-img-el {
       position: relative;
+
+      &:hover {
+        .image-text {
+          opacity: 1;
+        }
+
+        .image-container {
+          img {
+            opacity: .5;
+          }
+        }
+      }
+
       .image-container {
         position: relative;
         margin: 20px auto 0;
         z-index: 1000;
         background-color: #111;
-        &:hover {
-          ~ .image-text {
-            transition: visibility .4s ease-in;
-            visibility: visible;
-          }
-          img {
-            opacity: .5;
-            transition: opacity .2s ease-in;
-          }
+        opacity: 1;
+
+        img {
+          transition: opacity .2s ease-in-out;
+          height: 100%;
+          width: 100%;
+          display: block;
         }
+
         @media only screen and (max-width: $br-xl) {
           width: 95%;
         }
+
         @media only screen and (max-width: $br-lg) {
           width: 90%;
         }
+
         @media only screen and (max-width: $br-md) {
           margin-top: 10px;
         }
+
         @media only screen and (max-width: $br-sm) {
           margin-top: 10px;
           width: 100%;
         }
       }
     }
+
     .image-text {
       position: relative;
       z-index: 1000;
       top: -25%;
       left: 8%;
-      visibility: hidden;
-      &:hover {
-        transition: visibility .4s ease-in;
-        visibility: visible;
-        .image-container img {
-          opacity: .5;
-          transition: opacity .2s ease-in;
-        }
-      }
+      opacity: 0;
+      transition: opacity .2s ease-in-out;
+
       @media only screen and (max-width: $br-xl) {
         h4 {
           font-size: 20px;
         }
+
         p {
           font-size: 14px;
         }
       }
+
       @media only screen and (max-width: $br-lg) {
         h4 {
           font-size: 16px;
           line-height: 16px;
         }
+
         p {
           font-size: 12px;
         }
       }
+
       @media only screen and (max-width: $br-md) {
         h4 {
           font-size: 16px;
           line-height: 12px;
         }
+
         p {
           font-size: 12px;
         }
       }
+
       @media only screen and (max-width: $br-sm) {
         transform: translateY(-190%);
+
         h4 {
           font-size: 42px;
           line-height: 30px;
         }
+
         p {
           font-size: 24px;
         }
@@ -149,18 +171,17 @@
     }
     display: flex;
     justify-content: space-between;
-    img {
-      width: 100%;
-      height: 100%;
-    }
+
     @media only screen and (max-width: $br-xl) {
       img {
         justify-content: center;
       }
     }
+
     @media only screen and (max-width: $br-md) {
       margin-top: 10px;
     }
+
     @media only screen and (max-width: $br-sm) {
       flex-direction: column;
       margin-top: 10px;
